[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datautils"
version = "0.1.0"
description = "Paquete para obtener y limpiar observaciones del MPC y caracterizar cuerpos menores del sistema solar."
authors = [
    { name="Emiliano gómez", email="emigomeza04@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "polars",
    "numpy",
    "astroquery",
    "requests"
]

[tool.setuptools]
packages = ["datautils"]
include-package-data = true

[tool.setuptools.package-data]
datautils = ["family.json"]
